<resources>
    <string name="app_name">MyNeighbourhood</string>
    <string name="action_settings">Settings</string>

    <string name="logo">Logo</string>

    <!-- Title of the activities on the toolbar -->
    <string name="title_activity_main">My Neighbourhood</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_new_post">New Post</string>
    <string name="title_activity_view_posts_list">Latest Posts</string>
    <string name="title_activity_post_pager">Latest Posts</string>
    <string name="title_activity_view_profile">Profile</string>
    <string name="title_activity_edit_profile">Your Profile</string>

    <!-- Subtitle of the activities on the screen -->
    <string name="subtitle_home">What would you like to do?</string>

    <!-- Toolbar components -->
    <string name="item_profile">Your Profile</string>
    <string name="item_posts">Your posts</string>
    <string name="item_messages">Your Messages</string>
    <string name="item_home">Home Screen</string>
    <string name="item_settings">Settings</string>
    <string name="item_request_category">Request a new category</string>
    <string name="item_log_out">Log Out</string>

    <!-- Text fields hints -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_fname">First Name</string>
    <string name="hint_lname">Last Name</string>
    <string name="hint_postcode">Postcode</string>
    <string name="hint_post_title">Title</string>
    <string name="hint_post_content">Your post</string>
    <string name="hint_address">Address</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_about">Enter your description here...</string>

    <!-- Buttons labels -->
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_new_account">Create New Account</string>
    <string name="button_latest_posts">View the Latest Posts</string>
    <string name="button_new_post">Write a New Post</string>
    <string name="button_buy">Buy</string>
    <string name="button_sell">Sell</string>
    <string name="button_borrow">Borrow</string>
    <string name="button_give">Give away</string>
    <string name="button_offer_service">Offer a Service</string>
    <string name="button_request_service">Request a Service</string>
    <string name="button_submit">Submit</string>
    <string name="button_locate">Locate</string>
    <string name="button_contact">Contact</string>
    <string name="button_comment">Comment</string>
    <string name="button_report">Report</string>
    <string name="button_save">Save</string>

    <!-- Clickable textviews -->
    <string name="link_forgot_password"><u>Forgot your Password?</u></string>
    <string name="link_verify"><u>Verify Address</u></string>

    <!-- Spinners items -->
    <string-array name="spinner_items_post_category">
        <item>Category</item>
        <item>Announcement</item>
        <item>Event</item>
        <item>Question</item>
        <item>Found</item>
        <item>Lost</item>
        <item>Offer Service</item>
        <item>Request Service</item>
        <item>Buy</item>
        <item>Sell</item>
        <item>Borrow</item>
        <item>Give Away</item>
    </string-array>

    <string-array name="spinner_items_gender">
        <item>Gender</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>

</resources>
