<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    style="@style/Background"
    tools:context="com.llamadroid.clem.myneighbourhood.HomeActivity">

    <include layout="@layout/app_bar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/subtitle_home"
        style="@style/TitleStyle"/>

    <Button
        android:id="@+id/button_latest_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:text="@string/button_latest_posts"
        android:textSize="20sp"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/button_new_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/button_new_post"
        android:textSize="20sp"
        style="@style/ButtonStyle"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:stretchColumns="3">

        <TableRow>
            <Button
                android:id="@+id/button_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/button_buy"
                style="@style/ButtonStyle"/>

            <Button
                android:id="@+id/button_sell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/button_sell"
                style="@style/ButtonStyle"/>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_borrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/button_borrow"
                style="@style/ButtonStyle"/>

            <Button
                android:id="@+id/button_give"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/button_give"
                style="@style/ButtonStyle"/>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_offer_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:text="@string/button_offer_service"
                style="@style/ButtonStyle"/>

            <Button
                android:id="@+id/button_request_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/button_request_service"
                style="@style/ButtonStyle"/>
        </TableRow>


    </TableLayout>

</LinearLayout>

