<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controllers.EditProfileActivity">

    <include layout="@layout/app_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/field_profile_fname"
                style="@style/EditProfileInfoStyle"
                android:inputType="textCapWords"
                android:hint="@string/hint_fname"/>

            <EditText
                android:id="@+id/field_profile_lname"
                style="@style/EditProfileInfoStyle"
                android:inputType="textCapWords"
                android:hint="@string/hint_lname"/>

            <EditText
                android:id="@+id/field_profile_email"
                style="@style/EditProfileInfoStyle"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"/>

            <EditText
                android:id="@+id/field_profile_postcode"
                style="@style/EditProfileInfoStyle"
                android:inputType="text"
                android:hint="@string/hint_postcode"/>

            <EditText
                android:id="@+id/field_profile_address"
                style="@style/EditProfileInfoStyle"
                android:inputType="text"
                android:hint="@string/hint_address"/>

            <EditText
                android:id="@+id/field_profile_phone"
                style="@style/EditProfileInfoStyle"
                android:inputType="phone"
                android:hint="@string/hint_phone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/field_profile_dob"
                    style="@style/EditProfileInfoStyle"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="date"
                    android:hint="@string/hint_dob"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">

                    <Spinner
                        android:id="@+id/spinner_profile_gender"
                        android:layout_width="wrap_content"
                        style="@style/EditProfileInfoStyle"
                        tools:text="Gender"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp">

                <TextView
                    android:id="@+id/edit_profile_status"
                    style="@style/EditProfileInfoStyle"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    tools:text="Status"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">

                    <TextView
                        android:id="@+id/edit_profile_verify"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/EditProfileInfoStyle"
                        android:text="@string/link_verify"/>

                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/field_profile_about"
                style="@style/EditProfileInfoStyle"
                android:layout_height="200dp"
                android:inputType="textCapSentences|textMultiLine"
                android:scrollHorizontally="false"
                android:gravity="start"
                android:hint="@string/hint_about"/>

            <Button
                android:id="@+id/button_edit_profile_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/button_save"
                style="@style/ButtonStyle"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
