<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightCream"
    tools:context="com.llamadroid.clem.myneighbourhood.controllers.NewPostActivity">

    <include layout="@layout/app_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:gravity="center|top"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner_post_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:textColor="@color/brown"/>

        <EditText
            android:id="@+id/field_new_post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:inputType="textCapWords"
            android:hint="@string/hint_post_title"
            style="@style/FieldStyle"/>

            <EditText
                android:id="@+id/field_new_post_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="textCapSentences|textMultiLine"
                android:scrollHorizontally="false"
                android:gravity="start"
                android:hint="@string/hint_post_content"
                style="@style/FieldStyle"/>

        <Button
            android:id="@+id/button_submit_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_submit"
            style="@style/ButtonStyle"/>

    </LinearLayout>

</LinearLayout>
